syntax = "proto3";

package example;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
option go_package = "/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    security_definitions: {
        security: {
                key: "bearer"
                value: {
                type: TYPE_API_KEY
                in: IN_HEADER
                name: "Authorization"
                description: "Authentication token, prefixed by Bearer: Bearer <token>"
            }
        }
    }
    security: {
        security_requirement: {
            key: "bearer"
        }
    }
};

// Define your service
service ExampleService {
    rpc GetExample (ExampleRequest2) returns (ExampleResponse2) {
        option (google.api.http) = {
            get: "/api/example"
        };
		 option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            security: {} // Disable security key
            tags: ["Utility"]
            summary: "Health Check"
            description: "This API for check server's health"
        };

    }

	rpc RegisterUser(RegisterUserRequest)returns(RegisterUserResponse){
		option (google.api.http) = {
            post: "/api/register"
			body: "*"
        };
		 option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            security: {} // Disable security key
            tags: ["User"]
            summary: "Register User"
            description: "This API for register new user"
        };
	}

	rpc LoginUser(LoginUserRequest)returns(LoginUserResponse){
		option (google.api.http) = {
            post: "/api/login"
			body: "*"
        };
		 option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            security: {} // Disable security key
            tags: ["User"]
            summary: "Login User"
            description: "This API for login user"
        };
	}

	rpc GetUserAll(Empty)returns(GetUserResponse){
		option (google.api.http) = {
            get: "/api/user"
        };
		 option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            tags: ["User"]
            summary: "get User"
            description: "This API for get user all"
        };
	}
}

// Define request and response messages
message ExampleRequest2 {
    string name = 1;
}

message ExampleResponse2 {
    string message = 1;
}

message RegisterUserRequest{
	string name = 1;
	string email = 2;
	string password = 3;
}

message RegisterUserResponse{
	int64 id = 1;
	int32 status = 2;
	bool fail = 3;
	string message = 4;
	string token = 5;
}

message LoginUserRequest{
	string email = 1;
	string password = 2;
}

message LoginUserResponse{
	string token = 1;
	int64 status = 2;
	bool fail = 3;
	string message = 4;
}

message Empty {}

message GetUserResponse{
	int32 status = 1;
	bool fail = 2;
	string message = 3;
	repeated User data = 4;
}

message User{
	int64 id =1;
	string name = 2;
	string role = 3;
	string email = 4;
}